# DraftPilot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.mcp  Dockerfile.ui  Dockerfile.worker  README.md  RUNNING.md  alembic.ini  compose.dev.yml  compose.yaml  compose.yml  mkdocs.yaml  pyproject.toml  pytest.ini  run_app.sh  run_tests.sh  zensical.toml
.claude/agents/: draftpilot-data-sqlmodel.md  draftpilot-frontend-nicegui.md  draftpilot-python-uv.md
.claude/skills/add-component/: SKILL.md
.claude/skills/add-model/: SKILL.md
.claude/skills/nicegui-frontend/: SKILL.md
.claude/skills/run-stack/: SKILL.md
.claude/skills/sqlmodel-data/: SKILL.md
.claude/skills/uv/: SKILL.md
docs/: Project Setup.md  publishing-guide.md  references.md  roadmap.md
draftpilot-core/src/draftpilot_core/: foo.py
draftpilot-mcp/: pyproject.toml
draftpilot-mcp/src/draftpilot_mcp/: __init__.py
draftpilot-ui/: README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 121586f96c09_initial_schema_project_screenplay_scene.py  5113cead7b29_nested_screenplay_model_acts_blocks_.py
src/draftpilot/: __init__.py
src/draftpilot/agents/: __init__.py  orchestrator.py
src/draftpilot/app/: lifespan.py  main.py
src/draftpilot/core/: CLAUDE.md  __init__.py  config.py  logging.py  telemetry.py
src/draftpilot/core/cache/: __init__.py  redis.py
src/draftpilot/core/db/: __init__.py  database.py
src/draftpilot/core/queue/: __init__.py  pool.py
src/draftpilot/core/screenplay/: __init__.py  hydrate.py  schema.py
src/draftpilot/core/screenplay/adapters/: __init__.py  _bridge.py  fdx.py  fountain.py
src/draftpilot/crud/: __init__.py  acts.py  blocks.py  project_references.py  projects.py  scene_revisions.py  scenes.py  screenplays.py
src/draftpilot/mcp/: __init__.py  server.py
src/draftpilot/models/: __init__.py  act.py  base.py  block.py  enums.py  project.py  project_reference.py  scene.py  scene_revision.py  screenplay.py
src/draftpilot/ui/: CLAUDE.md  __init__.py  main.py
src/draftpilot/ui/components/: __init__.py  buttons.py  cards.py  design_system.py  empty_state.py  inputs.py  project_card.py  user_menu.py
src/draftpilot/ui/pages/: __init__.py  design_system.py  home.py  projects.py  screenplay.py
src/draftpilot/ui/static/: styles.css
src/draftpilot/ui/static/favicon/: site.webmanifest
src/draftpilot/ui/theme/: __init__.py  design.py  layout.py
src/draftpilot/worker/: CLAUDE.md  __init__.py  functions.py  settings.py
tests/: conftest.py  test_screenplay.py
tests/integration/: test_nicegui_app.py
tests/unit/: test_agents_orchestrator.py  test_app_lifespan.py  test_app_main.py  test_core_config.py  test_core_logging.py  test_mcp_server.py
