[project]
name = "draftpilot"
version = "0.1.0"
description = "AI-powered screenplay editor and story development platform"
readme = "README.md"
authors = [{ name = "Amruth Vithala", email = "amruthvvkp@gmail.com" }]
license = { text = "MIT" }
keywords = ["screenplay", "screenwriting", "ai", "storytelling", "film"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Editors",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[project.scripts]
draftpilot = "draftpilot:main"

[project.urls]
Homepage = "https://github.com/amruthvvkp/DraftPilot"
# Documentation = "https://draftpilot.dev/docs"
Repository = "https://github.com/amruthvvkp/DraftPilot"
Issues = "https://github.com/amruthvvkp/DraftPilot/issues"

[build-system]
requires = ["uv_build>=0.9.7"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "jupyter>=1.1.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "docs" },
]
lint = ["interrogate>=1.7.0", "ruff>=0.12.9"]
test = [
    "dirty-equals>=0.9.0",
    "pyhamcrest>=2.1.0",
    "pytest>=8.4.1",
    "pytest-pretty>=1.3.0",
]
docs = [
    "zensical>=0.0.46",
]
ui = [
    "nicegui>=3.13.0",
    "pydantic-ai>=2.0.0",
    { include-group = "lint" },
]
mcp = ["fastmcp>=3"]
otel = ["logfire[httpx,fastapi,system-metrics]>=4.37.0"]
