[project]
name = "draftpilot"
version = "0.1.0"
description = "AI-powered screenplay editor and story development platform"
readme = "README.md"
authors = [{ name = "Amruth Vithala", email = "amruthvvkp@gmail.com" }]
license = "MIT"
keywords = ["screenplay", "screenwriting", "ai", "storytelling", "film"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Editors",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[project.scripts]
draftpilot = "draftpilot:main"

[project.urls]
Homepage = "https://github.com/amruthvvkp/DraftPilot"
# Documentation = "https://draftpilot.dev/docs"
Repository = "https://github.com/amruthvvkp/DraftPilot"
Issues = "https://github.com/amruthvvkp/DraftPilot/issues"

[build-system]
requires = ["uv_build>=0.9.7,<0.12"]
build-backend = "uv_build"

[tool.logfire]
ignore_no_config = true

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.interrogate]
# Every function, method, class, and module needs a (one-line) docstring.
fail-under = 100
ignore-init-method = true
ignore-magic = true
ignore-nested-functions = false
ignore-setters = true
ignore-overloaded-functions = true
exclude = ["migrations/versions", "site", "tests", ".venv"]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "jupyter>=1.1.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "docs" },
]
lint = ["interrogate>=1.7.0", "ruff>=0.12.9"]
test = [
    "dirty-equals>=0.9.0",
    "pyhamcrest>=2.1.0",
    "pytest>=8.4.1",
    "pytest-pretty>=1.3.0",
]
docs = [
    "zensical>=0.0.46",
]
ui = [
    "nicegui>=3.13.0",
    "pydantic-ai>=2.0.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "arq>=0.26.0",
    { include-group = "otel" },
    { include-group = "lint" },
]
worker = [{ include-group = "ui" }]
debugpy = ["debugpy>=1.8.0"]
mcp = ["fastmcp>=3", { include-group = "otel" }]
otel = ["logfire[asyncpg,httpx,fastapi,redis,system-metrics]>=4.37.0"]
