[project]
name = "draftpilot"
version = "0.1.0"
description = "AI-powered screenplay editor and story development platform"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
authors = [{ name = "Amruth Vithala", email = "amruthvvkp@gmail.com" }]
keywords = ["ai", "film", "screenplay", "screenwriting", "storytelling"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
  "Topic :: Text Editors",
]
dependencies = [
  "httpx>=0.28.1",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
]

[project.urls]
Homepage = "https://github.com/amruthvvkp/DraftPilot"
Issues = "https://github.com/amruthvvkp/DraftPilot/issues"
# Documentation = "https://draftpilot.dev/docs"
Repository = "https://github.com/amruthvvkp/DraftPilot"

[project.scripts]
draftpilot = "draftpilot:main"

[dependency-groups]
dev = [
  "isort>=8.0.1",
  "jupyter>=1.1.1",
  "mypy>=2.1.0",
  "pre-commit>=4.6.0",
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "test" },
]
debugpy = ["debugpy>=1.8.0"]
docs = [
  "zensical>=0.0.46",
]
lint = ["interrogate>=1.7.0", "ruff>=0.12.9"]
mcp = ["fastmcp>=3", { include-group = "otel" }]
otel = ["logfire[asyncpg,httpx,fastapi,redis,system-metrics]>=4.37.0"]
test = [
  "dirty-equals>=0.9.0",
  "pyhamcrest>=2.1.0",
  "pytest>=8.4.1",
  "pytest-pretty>=1.3.0",
]
ui = [
  "alembic>=1.18.5",
  "arq>=0.26.0",
  "asyncpg>=0.30.0",
  "nicegui>=3.13.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-ai>=2.0.0",
  "redis>=5.2.0",
  "screenplay-tools>=0.0.10",
  "sqlmodel>=0.0.39",
  { include-group = "lint" },
  { include-group = "otel" },
]
worker = [{ include-group = "ui" }]

[build-system]
requires = ["uv_build>=0.9.7,<0.12"]
build-backend = "uv_build"

[tool.interrogate]
# Every function, method, class, and module needs a (one-line) docstring.
fail-under = 100
ignore-init-method = true
ignore-magic = true
ignore-nested-functions = false
ignore-setters = true
ignore-overloaded-functions = true
exclude = ["migrations/versions", "site", "tests", ".venv"]

[tool.logfire]
ignore_no_config = true

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
