[project]
name = "draftpilot-mcp"
version = "0.1.0"
description = "MCP server for DraftPilot - Expose screenplay AI to other tools"
readme = "README.md"
authors = [{ name = "Amruth Vithala", email = "amruthvvkp@gmail.com" }]
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["mcp", "ai", "screenplay", "api", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "draftpilot-core", # Workspace member dependency
    "fastmcp>=2.11.3",
]

[project.scripts]
draftpilot-mcp = "draftpilot_mcp:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/amruthvvkp/DraftPilot"
# Documentation = "https://draftpilot.dev/docs/mcp"
Repository = "https://github.com/amruthvvkp/DraftPilot"

[tool.uv.sources]
draftpilot-core = { workspace = true }

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    { include-group = "lint" },
    { include-group = "test" },
]
lint = ["interrogate>=1.7.0", "ruff>=0.12.9"]
test = [
    "dirty-equals>=0.9.0",
    "pyhamcrest>=2.1.0",
    "pytest>=8.4.1",
    "pytest-pretty>=1.3.0",
]
