[project]
name = "draftpilot-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "draftpilot-core",   # Workspace member dependency
    "flet[all]>=0.28.3",
    "pydantic>=2.11.7",
]

[project.urls]
Homepage = "https://github.com/amruthvvkp/DraftPilot"
# Documentation = "https://draftpilot.dev/docs/mcp"
Repository = "https://github.com/amruthvvkp/DraftPilot"

[tool.uv.sources]
draftpilot-core = { workspace = true }

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    { include-group = "lint" },
    { include-group = "test" },
]
lint = ["interrogate>=1.7.0", "ruff>=0.12.9"]
test = [
    "dirty-equals>=0.9.0",
    "pyhamcrest>=2.1.0",
    "pytest>=8.4.1",
    "pytest-pretty>=1.3.0",
]

[tool.uv]
package = false
